--- a/public/css/about.css
+++ b/public/css/about.css
@@ -52,13 +52,6 @@ div {
   
   
   
-  @font-face {
-    font-family: 'PicNic';
-    src: url('../public/assets/fonts/webfonts/PicNic-Regular.woff') format('woff');
-    /* src: url('../asset/OpenSans/OpenSans-Medium.ttf'); */
-    font-weight: 400;
-    font-style: normal;
-    }
   
     @font-face {
       font-family: 'IBMPlexMono';
@@ -616,13 +609,6 @@ top: 0;
 
 
 
-  @font-face {
-    font-family: 'PicNic';
-    src: url('../public/assets/fonts/webfonts/PicNic-Regular.woff');
-    /* src: url('../asset/OpenSans/OpenSans-Medium.ttf'); */
-    font-weight: 400;
-    font-style: normal;
-    }
   
     
   
@@ -1643,13 +1629,20 @@ padding: 2vw;
   
   
   
-    @font-face {
-      font-family: 'PicNic';
-      src: url('../public/assets/fonts/webfonts/PicNic-Regular.woff');
-      /* src: url('../asset/OpenSans/OpenSans-Medium.ttf'); */
-      font-weight: 400;
-      font-style: normal;
-      }
+ /* @font-face {
+  font-family: 'PicNic';
+  src: url('../public/assets/fonts/webfonts/PicNic-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+  } */
+
+  @font-face {
+    font-family: 'PicNicc';
+    src: url('../assets/fonts/otf/PicNic-Regular.otf');
+    /* src: url('../asset/OpenSans/OpenSans-Medium.ttf'); */
+    /* font-weight: 400;
+    font-style: normal; */
+    }
     
       
     
@@ -2485,6 +2478,10 @@ z-index: 100;
   .container{
     display: none;
   }
+   
+  .containermobile{
+    display: unset;
+  }
   /* CSS */
   .mobile-container {
     position: fixed;
@@ -2553,6 +2550,10 @@ z-index: 100;
   .container{
     display: none;
   }
+
+  .containermobile{
+    display: unset;
+  }
   /* CSS */
   .mobile-container {
     position: fixed;
@@ -2607,6 +2608,9 @@ z-index: 100;
 @media (min-width: 481px) and (max-width: 767px) {
   .container{
     display: none;
+  }
+  .containermobile{
+    display: unset;
   }
   /* CSS */
   .mobile-container {
@@ -2663,6 +2667,10 @@ z-index: 100;
     display: none;
   }
   /* CSS */
+
+  .containermobile{
+    display: unset;
+  }
   .mobile-container {
     position: fixed;
     width: 100vw;z-index: 100; backdrop-filter: blur(4px);
