--- a/public/css/home.css
+++ b/public/css/home.css
@@ -52,13 +52,20 @@ body {
 
 
 
-@font-face {
+/* @font-face {
   font-family: 'PicNic';
   src: url('../public/assets/fonts/webfonts/PicNic-Regular.woff') format('woff');
-  /* src: url('../asset/OpenSans/OpenSans-Medium.ttf'); */
   font-weight: 400;
   font-style: normal;
-  }
+  } */
+
+  @font-face {
+font-family: 'PicNicc';
+    src: url('../assets/fonts/otf/PicNic-Regular.otf');
+    /* src: url('../asset/OpenSans/OpenSans-Medium.ttf'); */
+    /* font-weight: 400;
+    font-style: normal; */
+    }
 
   @font-face {
     font-family: 'IBMPlexMono';
@@ -119,7 +126,7 @@ body {
   color: #000dff;
   overflow-y: hidden;
   overflow-x: hidden;
-  /* cursor: url(../public/assets/images/cursor.cur) -50 -50, auto!important; */
+  cursor: url("../public/assets/images/Fish.cur") -50 -50, auto!important;
     /* font-family: 'IBMPlexMono';  */
     background: #00002C;
     transition: all 0.75s ease-in-out;
@@ -706,7 +713,7 @@ option {
   font-weight: 300;
   mix-blend-mode: difference;
   text-transform: uppercase;
-  font-family: 'PicNic';
+  font-family: 'PicNicc';
   padding: var(--s-40);
   padding-bottom: 0;
   padding-top: 0;
@@ -715,11 +722,35 @@ option {
   z-index: 100 !important;
 }
 
+
+.livetextcomingsoon{
+   margin-top: auto;
+   line-height: var( --line-height);
+   font-size: var( --large-font);
+   font-weight: 300;
+   mix-blend-mode: difference;
+   text-transform: uppercase;
+   font-family: 'PicNicc';
+   padding: var(--s-40);
+   padding-bottom: 0;
+   padding-top: 0;
+   pointer-events: none;
+   transition:none;
+   z-index: 100 !important;
+   text-align: center;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+}
+
 .livetext,
 .description {
   z-index: 100;
   text-align: center;
 }
+
+
 
 .description {
   margin: 4rem 0;
@@ -770,6 +801,19 @@ font-size: .850vw;
 
 
 .livetext{
+  /* display: inline-block; */
+  transform-origin: 0 0;
+  width: 87vw;
+  height: 60vh;
+  margin: auto;
+  align-content: center;
+  justify-content: center;
+  z-index: 1000;
+  mix-blend-mode: difference;
+}
+
+
+.livetextcomingsoon{
   /* display: inline-block; */
   transform-origin: 0 0;
   width: 87vw;
@@ -1671,6 +1715,13 @@ top: 20vh;
     display: none;
   }
   /* CSS */
+
+  .containermobile{
+    display: unset;
+  }  .container{
+    display: none;
+  }
+  /* CSS */
   .mobile-container {
     /* max-width: 480px; */
     margin: auto;
@@ -1734,6 +1785,13 @@ top: 20vh;
 
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
   .container{
+    display: none;
+  }
+  /* CSS */
+
+  .containermobile{
+    display: unset;
+  }  .container{
     display: none;
   }
   /* CSS */
@@ -1819,6 +1877,13 @@ top: 20vh;
     display: none;
   }
   /* CSS */
+
+  .containermobile{
+    display: unset;
+  }  .container{
+    display: none;
+  }
+  /* CSS */
   .mobile-container {
     /* max-width: 480px; */
     margin: auto;
@@ -1867,6 +1932,13 @@ top: 20vh;
 
 @media (min-width: 320px) and (max-width: 480px) {
   .container{
+    display: none;
+  }
+  /* CSS */
+
+  .containermobile{
+    display: unset;
+  }  .container{
     display: none;
   }
   /* CSS */
