--- a/public/css/ws-in-seili.css
+++ b/public/css/ws-in-seili.css
@@ -51,14 +51,20 @@ body {
 }
 
 
-
-@font-face {
+/* @font-face {
   font-family: 'PicNic';
   src: url('../public/assets/fonts/webfonts/PicNic-Regular.woff') format('woff');
-  /* src: url('../asset/OpenSans/OpenSans-Medium.ttf'); */
   font-weight: 400;
   font-style: normal;
-  }
+  } */
+
+  @font-face {
+    font-family: 'PicNicc';
+    src: url('../assets/fonts/otf/PicNic-Regular.otf');
+    /* src: url('../asset/OpenSans/OpenSans-Medium.ttf'); */
+    /* font-weight: 400;
+    font-style: normal; */
+    }
 
   @font-face {
     font-family: 'IBMPlexMono';
@@ -615,15 +621,7 @@ option {
   
   /* -----------------Background content */
   
-  
-  
-    @font-face {
-      font-family: 'PicNic';
-      src: url('../public/assets/fonts/webfonts/PicNic-Regular.woff');
-      /* src: url('../asset/OpenSans/OpenSans-Medium.ttf'); */
-      font-weight: 400;
-      font-style: normal;
-      }
+
     
       
   
@@ -1628,14 +1626,7 @@ option {
     /* -----------------Background content */
     
     
-    
-      @font-face {
-        font-family: 'PicNic';
-        src: url('../public/assets/fonts/webfonts/PicNic-Regular.woff');
-        /* src: url('../asset/OpenSans/OpenSans-Medium.ttf'); */
-        font-weight: 400;
-        font-style: normal;
-        }
+  
       
         
       
@@ -2111,6 +2102,7 @@ option {
         margin-top: var(--m-20);
         margin-bottom: var(--s-20);
         transition:none;
+      
         /* position: fixed;
         left: 50%;
         top: 51%;
@@ -2952,13 +2944,7 @@ option {
   
   
   
-    @font-face {
-      font-family: 'PicNic';
-      src: url('../public/assets/fonts/webfonts/PicNic-Regular.woff');
-      /* src: url('../asset/OpenSans/OpenSans-Medium.ttf'); */
-      font-weight: 400;
-      font-style: normal;
-      }
+
     
       
     
@@ -3803,7 +3789,9 @@ z-index: 100;
 
 
 @media (min-width: 768px) and (max-width: 1024px) {
-  .container{
+.containermobile{
+    display: unset;
+  }  .container{
     display: none;
   }
   /* CSS */
@@ -3885,7 +3873,9 @@ z-index: 100;
 
 
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-  .container{
+.containermobile{
+    display: unset;
+  }  .container{
     display: none;
   }
   /* CSS */
@@ -3940,7 +3930,9 @@ z-index: 100;
 
 
 @media (min-width: 481px) and (max-width: 767px) {
-  .container{
+.containermobile{
+    display: unset;
+  }  .container{
     display: none;
   }
   /* CSS */
@@ -3994,7 +3986,9 @@ z-index: 100;
 
 
 @media (min-width: 320px) and (max-width: 480px) {
-  .container{
+.containermobile{
+    display: unset;
+  }  .container{
     display: none;
   }
   /* CSS */
