--- a/public/css/ws-in-howto.css
+++ b/public/css/ws-in-howto.css
@@ -128,6 +128,7 @@ body {
   overflow-x: hidden;
   /* cursor: url(../public/assets/images/cursor.cur) -50 -50, auto!important; */
     /* font-family: 'IBMPlexMono';  */
+    cursor: url("cursor3.cur") -50 -50, auto!important;
     background: #00002C;
     transition: all 0.75s ease-in-out;
     transition: opacity 0.35s, padding-left 0.75s;
