--- a/public/css/about.css
+++ b/public/css/about.css
@@ -2493,10 +2493,40 @@ z-index: 100;
     /* background-color: #555; */
     /* height: 500px; */
     /* color: white; */
-    border-radius: 10px;
+    /* border-radius: 10px; */
     /* mix-blend-mode: difference; */
   }
+    
   
+ 
+  
+  .topnav2 {
+    overflow: hidden;
+    /* background-color: #333; */
+    position: relative;
+  }
+  
+  .topnav2 #myLinks {
+    display: none;
+  }
+  
+  .topnav2 a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    /* font-size: 17px; */
+    display: block;
+    mix-blend-mode: difference;
+  }
+  
+  .topnav2 a.icon2 {
+    /* background: black; */
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
   .topnav {
     overflow: hidden;
     /* background-color: #333; */
@@ -2523,6 +2553,8 @@ z-index: 100;
     right: 0;
     top: 0;
   }
+
+  
   /* .livetextmobile {
     filter: blur(0px);
     opacity: 1;
@@ -2544,6 +2576,99 @@ z-index: 100;
   ##Screen = B/w 768px to 1024px
 */
 
+.dropbtncontainer{
+  display: flex;
+  align-items: center;
+  justify-content: center;  
+  z-index: 10;
+}
+
+.dropbtn {
+  background-color: #ffffff1f;
+  padding: 16px;
+  font-size: 16px;
+  cursor: pointer;
+  margin: auto;
+  z-index: 10;
+  top: calc(13vw - 0px);
+  position: fixed;
+  width: 90vw;
+  backdrop-filter: blur(4px);
+  padding: 5px;
+  border: 1px solid rgb(10, 199, 39);
+  font-weight: lighter;
+  font-size: 3.6vw;
+  color: rgb(10, 199, 39);
+  text-decoration: none;
+}
+
+/* .dropbtn:hover, .dropbtn:focus {
+  background-color: #2980B9;
+} */
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  color: rgb(10, 199, 39);
+  text-decoration: none;
+  z-index: 10;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  /* background-color: #f1f1f1; */
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  position: fixed;
+  /* padding: 5px; */
+  width: 90vw;z-index: 100; backdrop-filter: blur(4px);
+  top: 11.5vh;
+  color: rgb(10, 199, 39);
+  text-decoration: none;
+  z-index: 10;
+}
+
+.dropdown-content ul{
+  color: rgb(10, 199, 39);
+  text-decoration: none;
+  list-style-type: none;
+  margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
+}
+
+.dropdown-content ul li a{
+  color: rgb(10, 199, 39);
+  border: 1px solid rgb(10, 199, 39);
+}
+
+
+.dropdown-content ul li input{
+  color: rgb(10, 199, 39);
+  border: 1px solid rgb(10, 199, 39);
+  background-color: #c1c1c13b;
+  backdrop-filter: blur(4px);
+  width: 90vw;
+  height: 4vh;
+}
+
+
+.dropdown-content a {
+  color: black;
+  padding: 8px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {background-color: #ddd;}
+
+.show {display: block;}
 
 
 
@@ -2565,10 +2690,39 @@ z-index: 100;
     /* background-color: #555; */
     /* height: 500px; */
     /* color: white; */
-    border-radius: 10px;
+    /* border-radius: 10px; */
     /* mix-blend-mode: difference; */
   }
+    
   
+  
+  .topnav2 {
+    overflow: hidden;
+    /* background-color: #333; */
+    position: relative;
+  }
+  
+  .topnav2 #myLinks {
+    display: none;
+  }
+  
+  .topnav2 a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    /* font-size: 17px; */
+    display: block;
+    mix-blend-mode: difference;
+  }
+  
+  .topnav2 a.icon2 {
+    /* background: black; */
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
   .topnav {
     overflow: hidden;
     /* background-color: #333; */
@@ -2595,6 +2749,8 @@ z-index: 100;
     right: 0;
     top: 0;
   }
+
+  
   
 }
 
@@ -2623,10 +2779,39 @@ z-index: 100;
     /* background-color: #555; */
     /* height: 500px; */
     /* color: white; */
-    border-radius: 10px;
+    /* border-radius: 10px; */
     /* mix-blend-mode: difference; */
   }
+    
   
+  
+  .topnav2 {
+    overflow: hidden;
+    /* background-color: #333; */
+    position: relative;
+  }
+  
+  .topnav2 #myLinks {
+    display: none;
+  }
+  
+  .topnav2 a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    /* font-size: 17px; */
+    display: block;
+    mix-blend-mode: difference;
+  }
+  
+  .topnav2 a.icon2 {
+    /* background: black; */
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
   .topnav {
     overflow: hidden;
     /* background-color: #333; */
@@ -2653,6 +2838,8 @@ z-index: 100;
     right: 0;
     top: 0;
   }
+
+  
 }
 
 /* 
@@ -2681,10 +2868,39 @@ z-index: 100;
     /* background-color: #555; */
     /* height: 500px; */
     /* color: white; */
-    border-radius: 10px;
+    /* border-radius: 10px; */
     /* mix-blend-mode: difference; */
   }
+    
   
+  
+  .topnav2 {
+    overflow: hidden;
+    /* background-color: #333; */
+    position: relative;
+  }
+  
+  .topnav2 #myLinks {
+    display: none;
+  }
+  
+  .topnav2 a {
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    /* font-size: 17px; */
+    display: block;
+    mix-blend-mode: difference;
+  }
+  
+  .topnav2 a.icon2 {
+    /* background: black; */
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
   .topnav {
     overflow: hidden;
     /* background-color: #333; */
@@ -2711,6 +2927,8 @@ z-index: 100;
     right: 0;
     top: 0;
   }
+
+  
 
   
   
