--- a/public/css/about.css
+++ b/public/css/about.css
@@ -366,10 +366,11 @@ top: 0;
   top: 50vh;
 }
 
-
+ 
 .contentSection {
   
   background: linear-gradient(to bottom, rgba(71, 77, 86, 0.65) 0%, rgba(0,0,255,0) 100%);
+  background: linear-gradient(to bottom, rgba(71, 77, 86, 0.99) 0%, rgba(0,0,255,0) 100%);
   backdrop-filter: blur(1px);
   /* mix-blend-mode: difference; */
   z-index: 1;
@@ -507,8 +508,9 @@ top: 0;
   /* font-size: .5rem; */
   padding-bottom: 2vw;
   padding-top: 15vw;
+  padding: 20px;
   color: rgba(255, 255, 255, 0.757);
-  mix-blend-mode: difference;
+  /* mix-blend-mode: difference; */
   font-family: "Helvetica Neue LT W01_65 Md",helvetica,sans-serif;
 }
 
@@ -2327,6 +2329,8 @@ z-index: 100;
 
     /* ---------sub menu mobile*/
 
+
+
     .dropdown {
       position: relative;
       display: block;
@@ -2423,8 +2427,6 @@ z-index: 100;
   padding: 0;
   border: 1px solid #ffffffcb;
   text-align: center;
-  backdrop-filter: blur(4px);
-    background: #2020643b;
   -webkit-transition: height 0.3s ease;
           transition: height 0.3s ease;
 }
@@ -2456,6 +2458,173 @@ z-index: 100;
   /* padding: 0; */
     margin-block-start: 0em;
     margin-block-end: 0em;
+}
+
+
+.containerli {
+  list-style:none;
+  margin: 0;
+  padding: 0;
+  color: rgb(10, 199, 39);
+  font-size: 1rem;
+  text-align: center;
+  /* border-radius: 5vw; */
+  text-decoration: underline;
+
+}
+.item {
+  /* background: tomato; */
+  padding: 5px;
+  width: 131px;
+  /* height: 167px; */
+  margin: 8px;
+  margin:0.1vw;
+  font-family: "Helvetica Neue LT W01_65 Md",helvetica,sans-serif;
+  font-weight: lighter;
+  /* line-height: 20px; */
+  /* color: white;
+  font-weight: bold;
+  font-size: 3em; */
+  font-size: 1.1vw;
+  /* font-size: 1.15vw; */
+  text-align: center;
+  /* border-radius: 5vw; */
+  text-decoration: underline;
+  text-align: center;
+}
+
+/*float layout*/
+.float {
+  /* max-width: 1200px; */
+  max-width: 96vw;
+  margin: 0 auto;
+  justify-content: center;
+display: flex;
+}
+.float:after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+.float-item {
+  float: left;
+}
+
+
+
+
+
+/*Acco*/
+.ac-container {
+  max-width: 400px;
+  padding-top:5vh;
+}
+
+.ac-container label {
+  /* height: 30px !important;  */
+  /* line-height: 21px !important; */
+  /* font-size: 12px !important; */
+  /* font-family: 'Open Sans','Arial Narrow',Arial,sans-serif !important; */
+  padding: 5px 20px;
+  position: relative;
+  z-index: 20;
+  display: block;
+  height: 30px;
+  cursor: pointer;
+  color: rgb(10, 199, 39);
+  text-decoration: underline;
+}
+
+.ac-container {
+  width: 100%;
+  margin: 10px auto 30px auto;
+  text-align: left;
+}
+
+.ac-container label:hover {
+  /* background: #fff; */
+}
+
+.ac-container input:checked + label,.ac-container input:checked + label:hover {
+  /* background: #f1f2f3; */
+  /* color: #666; */
+  /* text-shadow: 0 1px 1px rgba(255,255,255,0.6); */
+  /* box-shadow: 0 0 0 1px rgba(155,155,155,0.3),0 2px 2px rgba(0,0,0,0.1); */
+  /* height: 30px;
+  line-height: 21px;
+  font-size: 13px; */
+}
+
+.ac-container label:hover:after,.ac-container input:checked + label:hover:after {
+  content: '';
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  right: 13px;
+  top: 7px;
+  background: transparent url(../images/arrow_down.png) no-repeat center center;
+}
+
+.ac-container input:checked + label:hover:after {
+  background-image: url(../images/arrow_up.png);
+}
+
+.ac-container input {
+  display: none;
+}
+
+.ac-container article {
+  /* background: rgba(255,255,255,0.5); */
+  margin-top: -1px;
+  overflow: hidden;
+  height: 0;
+  position: relative;
+  z-index: 10;
+  -webkit-transition: height 0.3s ease-in-out,box-shadow 0.6s linear;
+  -moz-transition: height 0.3s ease-in-out,box-shadow 0.6s linear;
+  -o-transition: height 0.3s ease-in-out,box-shadow 0.6s linear;
+  -ms-transition: height 0.3s ease-in-out,box-shadow 0.6s linear;
+  transition: height 0.3s ease-in-out,box-shadow 0.6s linear;
+}
+
+.ac-container article p {
+  font-style: normal;
+  /* color: #777; */
+  /* line-height: 23px; */
+  color: rgba(255, 255, 255, 0.757);
+  mix-blend-mode: difference;
+  /* font-size: 10px; */
+  padding: 20px;
+  font-family: "Helvetica Neue LT W01_65 Md",helvetica,sans-serif;
+  /* text-shadow: 1px 1px 1px rgba(255,255,255,0.8); */
+  /* font: normal normal 12px 'Open Sans'; */
+}
+
+.ac-container input:checked ~ article {
+  -webkit-transition: height 0.5s ease-in-out,box-shadow 0.1s linear;
+  -moz-transition: height 0.5s ease-in-out,box-shadow 0.1s linear;
+  -o-transition: height 0.5s ease-in-out,box-shadow 0.1s linear;
+  -ms-transition: height 0.5s ease-in-out,box-shadow 0.1s linear;
+  transition: height 0.5s ease-in-out,box-shadow 0.1s linear;
+  /* box-shadow: 0 0 0 1px rgba(155,155,155,0.3); */
+}
+
+.ac-container input:checked ~ article.ac-small {
+  height: 400px;
+}
+
+.ac-container input:checked ~ article.ac-medium {
+  height: 600px;
+}
+
+.ac-container input:checked ~ article.ac-large {
+  height: 450px;
+}
+
+.ac-container input:checked ~ article.ac-larger {
+  height: 600px;
 }
 
 
