--- a/public/css/home.css
+++ b/public/css/home.css
@@ -35,6 +35,7 @@ div::-webkit-scrollbar {
   --ex-small-font: clamp(.75rem,10vw,1rem);
   --small-font: 14pt;
   --med-font: 24pt;
+  --large-font: 24.425vw;
   --large-font: 18.425vw;
   --xl-large-font: 20.425vw;
   --line-height: 16.425vw;
@@ -258,11 +259,12 @@ option {
 /* Start----------------------------------------------------------------------------------------------------------------- */
 
   /* background-image: url(../public/assets/images/backgroundmobile.png); */
-.containersoon{
+/* .containersoon{
   background-repeat: no-repeat;
   background-size: contain;
     background-image: url(soon.png);
-}
+} */
+
 
 
   .musicinfo {
@@ -481,6 +483,7 @@ option {
   text-transform: uppercase;
     align-items: center;
     font-size: .9rem;
+    font-size: 1vw;
     color: white;
     mix-blend-mode:difference;
     text-transform: none;
@@ -489,31 +492,25 @@ option {
 }
 
 .subTextOpacitymobile{
-  position: relative;
-  text-align: left;
-  word-spacing: .5rem;
-  font-size: var( --ex-small-font);
-  margin: var(--s-10) auto;
-  justify-content:  center;
-  width: 100vw;
-  z-index: 100 !important;
-  /* border-radius: 5vw; */
-  /* border-bottom: 1px solid rgb(21, 0, 255); */
-  /* padding: calc(10.5vw + 1px); */
-  text-transform: uppercase;
+    position: relative;
+    text-align: left;
+    word-spacing: 0.5rem;
+    margin: var(--s-10) auto;
+    justify-content: center;
+    width: 100vw;
+    z-index: 100 !important;
+    text-transform: uppercase;
     align-items: center;
-    font-size: .9rem;
+    font-size: 2vw;
     color: white;
     text-transform: none;
     padding-left: calc(4.5vw + 1px);
     padding-right: calc(6.5vw + 1px);
+    padding-left: calc(5.5vw + 1px);
+    padding-right: calc(1.5vw + 1px);
+    width: 99vw;
 }
-/* 
-    text-transform: uppercase;
-    align-items: center;
-    font-size: .9rem;
-    color: white;
-    text-transform: none; */
+
 
     
 
@@ -862,12 +859,12 @@ font-size: .850vw;
   /* display: inline-block; */
   transform-origin: 0 0;
   width: 87vw;
-  height: 60vh;
+  /* height: 60vh; */
   margin: auto;
   align-content: center;
   justify-content: center;
   z-index: 1000;
-  mix-blend-mode: difference;
+  /* mix-blend-mode: difference; */
 }
 
 
@@ -896,25 +893,18 @@ font-size: .850vw;
 /* hover over text */
 
 .nppostname {
-  text-align: center;
+  /* text-align: center;
   justify-content: center;
   position: absolute;
   z-index: 1000;
   top: 0%;
   left: 13vw !important;
-  transform: translate(-50%, 70%) !important;
+  transform: translate(-50%, 70%) !important; */
   opacity: 0;
-  -webkit-transform: translate3d(0, -15px, 0);
-  transform: translate3d(0, -15px, 0);
-  -webkit-transition: all 150ms linear;
-  -o-transition: all 150ms linear;
-  transition: all 150ms linear;
   visibility: hidden;
   pointer-events: none;
   color: #ffffff;
-  /* font-weight: bold; */
   transition-duration: 2s;
-  text-transform: none;
   font-size: .9rem;
 }
 
@@ -1237,29 +1227,24 @@ z-index: 10000;
 
 /* ver two  */
 .subTextmobile{
-  justify-content: center;
   text-transform: uppercase;
   /* width: 40vw; */
-  /* position: fixed;
-  left: 50%;
-  top: 51%;
-  transform: translate(-50%, -50%); */
   padding-top: 0;
   margin-top: 0;
   z-index: 100 !important;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   font-size: 1.2rem;
   /* font-weight: bold; */
   color: white;
   mix-blend-mode: difference;
   text-transform: none;
-  position: fixed;
-  padding-bottom:2vh; 
-    /* left: 50%; */
-    bottom: 0vh;
-   overflow-y: none;
+  /* position: fixed; */
+  padding-bottom: 2vh;
+  /* left: 50%; */
+  /* bottom: 0vh; */
+  overflow-y: none;
+  /* flex-wrap: wrap;
 }
 
 .subTextmobilenav{
@@ -1291,12 +1276,11 @@ z-index: 10000;
 
 .centermobile{
   position: relative;
-  left:10%;
+  display: flex;
+  left: 4%;
   /* top: 51%; */
   /* transform: translate(-50%, -50%); */
-/* padding-top: 0;
-margin-top: 0;
-z-index: 100 !important; */
+  justify-content: center;
 }
 
 .algaeListContainermobile{
@@ -1304,13 +1288,24 @@ z-index: 100 !important; */
   /* text-align: center; */
   text-transform: uppercase;
     align-items: center;
-    font-size: .9rem;
+    font-size: 3.5vw;
     color: white;
     text-transform: none;
 }
 
+
+.algaeList{
+  /* font-size: 3.5vw; */
+}
+
+.algaeListContainermobile div {
+  width: 8.5vw;
+  width: 27.5vw;
+}
+
 .nppostmobile{
   padding: .5rem; 
+  padding-bottom: 8.5vh;
 }
 
 .algaeListWrappermobile{
@@ -1323,8 +1318,15 @@ z-index: 100 !important; */
 
 .mainmobile{
   height: 100vh;
+  /* display: flex; */
   /* background: radial-gradient(circle at center , #ffffffab 0,#6a6afc76 50%,#000070 60%, #12129176 70%, #00002C 100%); */
-  /* background: radial-gradient(circle at center , #53535396 0,#271d7c76 20%,#00002c, #050567 100%) */
+  /* background: radial-gradient(circle at center , #53535396 0,#271d7c76 20%,#00002c, #050567 100%); */
+  background: radial-gradient(circle at center , #000033 0,#01014c 20%,#1a1a60, #05056742 100%);
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 
@@ -1665,27 +1667,21 @@ background-color: transparent;
   width:100%;
 }
 
-.fishContainer{
+/* .fishContainer{
   position: absolute; 
-  /* position:fixed; */
 top: 25vh;
-left: 0vw;
-width: 30%;
+left: 7vw;
 }
 .fishContainer2{
   position: absolute; 
-  /* position:fixed; */
   top: 35vh;
-  left: 0vw;
-  width: 30%;
+  left: 7vw;
   }
   .fishContainer3{
     position: absolute; 
-    /* position:fixed; */
     top: 45vh;
-    left: 0vw;
-    width: 30%;
-    }
+    left: 7vw;
+    } */
 
 .fishWrapper{
   position:fixed;
@@ -1729,21 +1725,165 @@ width: 30%;
 .livetextmobile{
   filter: blur(0px);
   opacity: 1;
-  font-size: 30vw;
   text-align: center;
   font-family: 'PicNic';
-  justify-content: center;
+  color: #000dff;
+  color: #0051ff;
+  filter: blur(0px);
+  opacity: 1;
+  font-size: 13vh;
+  text-align: center;
+  font-family: 'PicNic';
+  left: 0;
+  right: 0;
+  margin: 0px auto;
+  /* max-width: 99vw; */
+  /* display: inline-block; */
+  /* transform-origin: 0 0; */
   width: 100vw;
-  color:#000dff;
-  /* left: 50%;
-  top: 51%;
-  transform: translate(-50%, -50%);
-  position: absolute;
-  pointer-events: none; */
+  /* height: 60vh; */
+  margin: auto;
+  align-content: center;
+  justify-content: center;
+  z-index: 1000;
+  mix-blend-mode: difference;
+  /* margin-top: auto; */
+  /* line-height: var( --line-height); */
+  /* font-size: var( --large-font); */
+  font-weight: 300;
+  text-transform: uppercase;
+  font-family: 'PicNic';
+  font-family: 'PicNicc';
+  padding: 2vw;
+  padding-top: 11vh;
+  font-size: 20vh;
+  /* padding-bottom: 17vh; */
+  /* padding-top: 0; */
+  /* pointer-events: none; */
+  /* transition: none; */
+  /* z-index: 100 !important; */
+  /* position: absolute; */
+  /* top: 40%; */
+  /* left: 50%; 
+  /* transform: translate(-50%, -50%);*/
 }
 
 
 
+
+
+/* (B) RESPONSIVE IMAGE */
+.textcenter img { 
+  /* width: 100%;  */
+}
+.textcenter { max-width: 600px; } /* OPTIONAL */
+ 
+/* (C) CENTER TEXT ON IMAGE */
+.textcenter { position: relative; z-index: 1000;}
+.textcenter figcaption {
+  position: absolute;
+  top: 7px;
+  left: 0;
+  width: 230px;
+  text-align: center;
+  /* color: blue; */
+  /* font-size: 22px; */
+  z-index: 10000;
+  left: -70px;
+  /* font-weight: 700;*/
+  
+}
+
+
+
+
+.nppost:hover + figcaption {
+  opacity: 1;
+  visibility: visible;
+  transition-duration: 1.5s;
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+          z-index: 10000;      
+}
+
+
+figcaption{
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  color: #ffffff;
+  transition-duration: 2s;
+  font-size: .9rem;
+  font-size: 1vw;
+  color: #ffffff;
+/* font-weight: bold; */
+transition-duration: 2s;
+text-transform: none;
+/* font-size: .7rem;r */
+width: 100%;
+}
+
+.nppostt:hover + figcaption {
+  opacity: 1;
+  visibility: visible;
+  transition-duration: 1.5s;
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+          z-index: 10000;      
+}
+
+.npposttt:hover + figcaption {
+  opacity: 1;
+  visibility: visible;
+  transition-duration: 1.5s;
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+          z-index: 10000;      
+}
+
+
+.fishall{
+  /* display: flex;
+  justify-content: space-around;
+  padding: 0;
+  margin: 0; */
+  position: absolute; 
+  top: 25vh;
+  left: 7vw;
+  display: flex;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+
+
+.bottomcont{
+  position: absolute;
+  bottom: 7vw;
+  z-index: 1000;
+  /* display: flex; */
+  mix-blend-mode: difference;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  flex-wrap: nowrap;
+  /* padding-bottom: 40vh; */
+}
+
+
+.centercont{
+  position: relative;
+  /* display: flex; */
+  padding: 2vh;
+  /* height: 67vh; */
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
 
 /* ---------------------------------- mobile */
@@ -1771,13 +1911,23 @@ width: 30%;
   }
   /* CSS */
   .mobile-container {
+    position: fixed;
+    width: 100vw;
+    z-index: 1000;
+    backdrop-filter: blur(4px);
+    background: #2020643b;
     /* max-width: 480px; */
     margin: auto;
     /* background-color: #555; */
-    height: 500px;
+    /* height: 500px; */
     /* color: white; */
     border-radius: 10px;
-    /* mix-blend-mode: difference; */
+    /* position: relative; */
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: flex-start;
   }
   
   .topnav {
@@ -1807,20 +1957,6 @@ width: 30%;
     right: 0;
     top: 0;
   }
-  /* .livetextmobile {
-    filter: blur(0px);
-    opacity: 1;
-    font-size: 20vw;
-    text-align: center;
-    font-family: 'PicNic';
-    justify-content: center;
-    width: 100vw;
-    left: 50%;
-    top: 51%;
-    transform: translate(-50%, -50%);
-    position: absolute;
-    pointer-events: none;
-} */
 }
 
 /* 
@@ -1844,13 +1980,23 @@ width: 30%;
   }
   /* CSS */
   .mobile-container {
+    position: fixed;
+    width: 100vw;
+    z-index: 1000;
+    backdrop-filter: blur(4px);
+    background: #2020643b;
     /* max-width: 480px; */
     margin: auto;
     /* background-color: #555; */
-    height: 500px;
+    /* height: 500px; */
     /* color: white; */
     border-radius: 10px;
-    /* mix-blend-mode: difference; */
+    /* position: relative; */
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: flex-start;
   }
   
   .topnav {
@@ -1887,9 +2033,19 @@ width: 30%;
   /* text-align: center; */
   text-transform: uppercase;
     align-items: center;
-    font-size: 1.9rem;
+    /* font-size: 1.9rem; */
     color: white;
     text-transform: none;
+        /* width: 100%; */
+        justify-content: center;
+        /* margin: 0 auto; */
+        font-size: var( --ex-small-font);
+        padding-top: var(--s-10);
+        /* margin: var(--s-10) auto; */
+        justify-content: center;
+        /* width: 80vw; */
+        color: white;
+        mix-blend-mode: difference;
 }
   
 
@@ -1916,13 +2072,23 @@ width: 30%;
   }
   /* CSS */
   .mobile-container {
+    position: fixed;
+    width: 100vw;
+    z-index: 1000;
+    backdrop-filter: blur(4px);
+    background: #2020643b;
     /* max-width: 480px; */
     margin: auto;
     /* background-color: #555; */
-    height: 500px;
+    /* height: 500px; */
     /* color: white; */
     border-radius: 10px;
-    /* mix-blend-mode: difference; */
+    /* position: relative; */
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: flex-start;
   }
   
   .topnav {
@@ -1951,6 +2117,16 @@ width: 30%;
     right: 0;
     top: 0;
   }
+
+  .subTextOpacitymobile{
+font-size: 3vw;
+  }
+
+
+  .livetextmobile{
+ font-size: 16vh;
+ padding-top: 5vh;
+  }
 }
 
 /* 
@@ -1967,6 +2143,16 @@ width: 30%;
   }
   /* CSS */
 
+
+  .livetextmobile{
+    padding-top: 11vh;
+    font-size: 13vh;
+  }
+
+  .subTextOpacitymobile{
+    font-size: 4vw;
+      }
+
   .containermobile{
     display: unset;
   }  .container{
@@ -1974,13 +2160,23 @@ width: 30%;
   }
   /* CSS */
   .mobile-container {
+    position: fixed;
+    width: 100vw;
+    z-index: 1000;
+    backdrop-filter: blur(4px);
+    background: #2020643b;
     /* max-width: 480px; */
     margin: auto;
     /* background-color: #555; */
-    height: 500px;
+    /* height: 500px; */
     /* color: white; */
     border-radius: 10px;
-    /* mix-blend-mode: difference; */
+    /* position: relative; */
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: flex-start;
   }
   
   .topnav {
