--- a/public/css/ws-in-howto.css
+++ b/public/css/ws-in-howto.css
@@ -51,6 +51,25 @@ body {
 }
 
 
+.footnote{
+  border-top: 1px solid;
+  padding-top: 10px;
+  color: rgb(10, 199, 39);
+  font-size: 1vw;
+  width: 60%;
+}
+
+.footnotemobile{
+  border-top: 1px solid;
+  padding-top: 10px;
+  color: rgb(10, 199, 39);
+  font-size: 2.5vw;
+}
+
+
+.link{
+  color: rgb(10, 199, 39);
+}
 
 /* @font-face {
   font-family: 'PicNic';
@@ -128,8 +147,8 @@ body {
   overflow-x: hidden;
   /* cursor: url(../public/assets/images/cursor.cur) -50 -50, auto!important; */
     /* font-family: 'IBMPlexMono';  */
-    cursor: url("cursor3.cur") -50 -50, auto!important;
     background: #00002C;
+    cursor: url("cursor3.cur") -50 -50, auto!important;
     transition: all 0.75s ease-in-out;
     transition: opacity 0.35s, padding-left 0.75s;
     animation: fadein 2s;
@@ -235,6 +254,9 @@ select {
 option {
   border: solid 1px #DDDDDD;
 }
+
+
+
 
 
 
@@ -434,6 +456,9 @@ option {
   }
   
   
+  .seminarimage img{
+    width: 60%;
+  }
   
   /* --------------------- gradient */
   
@@ -623,9 +648,8 @@ option {
   
   /* -----------------Background content */
   
-  
-  
-   
+
+    
       
   
     .main {
@@ -1049,7 +1073,15 @@ option {
   .titlewitness{
     font-size: 3em;
     line-height: 0em;
-    font-family: PicNic;
+    /* font-family: PicNic; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100% !important;
+    color: rgb(10, 199, 39);
+        line-height: 2.75vw !important;
+        font-size: 2.75vw !important;
+    margin-bottom: 0.5vw !important;
   }
   
   
@@ -1074,9 +1106,10 @@ option {
   
   .seminarimage{
     display: grid;
-  align-items: center;
-  padding: 2vw;
-  
+    align-items: center;
+    padding: 2vw;
+    justify-items: center;
+    justify-content: start;
   }
   
   
@@ -1091,7 +1124,7 @@ option {
       .columnmobile {
       /* overflow-y: auto !important; */
       z-index: 100;
-      font-size: 4.6vw;
+      font-size: 3.6vw;
       /* padding: 1.8vw 1vw 2vw 2vw; */
       /* height: calc(calc(100vh - 3vw) - 1px); */
       top: 10vw;
@@ -1206,6 +1239,10 @@ option {
       padding-top: 0vh;
     }
   
+    .containermobile{
+      display: none;
+    }
+    
   
     .nav2{
       padding: 0;
@@ -1227,19 +1264,19 @@ option {
       display: flex;
       text-align: center;
       justify-content: center;
-      border: 1px solid #0000ffd4;
+      border: 1px solid rgb(10, 199, 39);
       border-radius: 50%;
       width: 96vw;
       -webkit-backdrop-filter: blur(4px);
       backdrop-filter: blur(4px);
-      background: #2020643b;
+      background: #ffffff1f;
+      color: rgb(10, 199, 39);
+      font-size: 3.6vw;
     }
   
   
   
-  .containermobile{
-    display: none;
-  }
+  
   
   
   
@@ -1627,7 +1664,7 @@ option {
     /* -----------------Background content */
     
     
-
+  
       
         
       
@@ -2103,6 +2140,7 @@ option {
         margin-top: var(--m-20);
         margin-bottom: var(--s-20);
         transition:none;
+      
         /* position: fixed;
         left: 50%;
         top: 51%;
@@ -2249,35 +2287,33 @@ option {
       }
   
         .contentwrapper{
-            text-align: left;
-            flex-direction: column; 
-            overflow: scroll;
-            /* width: 60%; */
-            text-transform: none;
-            font-family: "Helvetica Neue LT W01_65 Md",helvetica,sans-serif;
-            font-weight:200;
-            margin: var(--s-80);
-            min-height: 200px; 
-            background-color:#625fb93c;
-            backdrop-filter: blur(20px);
-            padding: var(--s-40);
-            border-radius: 2vw;
-            /* border: .5px solid #e0e0e0; */
-            justify-content: center;
-            z-index: 10;
-            height: 85vh;
-            /* color: #e0e0e0;
-            mix-blend-mode: difference; */
-            
+           text-align: left;
+    flex-direction: column;
+    overflow: scroll;
+    /* width: 60%; */
+    /* text-transform: none; */
+    /* font-family: "Helvetica Neue LT W01_65 Md",helvetica,sans-serif; */
+    font-weight: 200;
+    /* margin: var(--s-80); */
+    min-height: 200px;
+    /* background-color: #625fb93c; */
+    /* backdrop-filter: blur(20px); */
+    /* padding: var(--s-40); */
+    /* border-radius: 2vw; */
+    /* border: 0.5px solid #e0e0e0; */
+    /* justify-content: center; */
+    /* z-index: 10; */
+    /* height: 85vh; */
         }
   
         .contentparagraph{
-            display: flex;
-            flex-direction:row;
-            mix-blend-mode: none;
-            z-index: 100;
-            mix-blend-mode: difference;
-            color:#e0e0e0;
+          display: flex;
+          flex-direction: column;
+          mix-blend-mode: none;
+          z-index: 100;
+          mix-blend-mode: difference;
+          color: #e0e0e0;
+          align-items: center;
         }
   
         .contentwrapper p{
@@ -2285,6 +2321,7 @@ option {
          mix-blend-mode: difference;
     /* color: #edff85d4; */
     z-index: 100;
+    width: 50%;
         }
   
       .contentwrappermobile p{
@@ -2523,20 +2560,21 @@ option {
 
 
   .subtitlemobile{
-    font-size: 9vw;
+    font-size: 6vw;
     text-transform: none;
     line-height: 0;
-    /* padding: 7vw; */
+    padding: 7vw;
     padding-top: 0vh;
     padding-bottom: 0vh;
-    padding-left: 7vw;
+    color: rgb(10, 199, 39);
   }
   .subtitlemobiletop{
-    font-size: 9vw;
+    font-size: 6vw;
     text-transform: none;
     line-height: 0;
     padding: 7vw;
     padding-top: 15vh;
+    color: rgb(10, 199, 39);
   }
 
 
@@ -2942,6 +2980,7 @@ option {
   
   
   /* -----------------Background content */
+  
   
   
 
@@ -3575,8 +3614,8 @@ background-color: #625fb93c;
           font-weight:200;
           margin: var(--s-80);
           min-height: 200px; 
-          background-color:#625fb93c;
-          backdrop-filter: blur(20px);
+          /* background-color:#625fb93c; */
+          /* backdrop-filter: blur(20px); */
           padding: var(--s-40);
           border-radius: 2vw;
           /* border: .5px solid #e0e0e0; */
@@ -3589,12 +3628,27 @@ background-color: #625fb93c;
       }
 
       .contentparagraph{
-          display: flex;
-          flex-direction:row;
-          mix-blend-mode: none;
-          z-index: 100;
-          mix-blend-mode: difference;
-          color:#e0e0e0;
+        display: flex;
+        flex-direction: column;
+        mix-blend-mode: none;
+        z-index: 100;
+        mix-blend-mode: difference;
+        color: #e0e0e0;
+        align-items: center;
+      }
+
+      .contentparagraphtitle{
+        display: flex;
+        flex-direction: column;
+        mix-blend-mode: none;
+        z-index: 100;
+        mix-blend-mode: difference;
+        color: #e0e0e0;
+        align-items: center;
+        color: rgb(10, 199, 39);
+        line-height: 2.75vw !important;
+        font-size: 2.75vw !important;
+    margin-bottom: 0.5vw !important;
       }
 
       .contentwrapper p{
@@ -3602,6 +3656,7 @@ background-color: #625fb93c;
        mix-blend-mode: difference;
   /* color: #edff85d4; */
   z-index: 100;
+  width: 50%;
       }
 
     .contentwrappermobile p{
@@ -3780,10 +3835,6 @@ z-index: 100;
 /* ---------------------------------- ------------------------------------------------------mobile */
 
 
-
-
-
-
 /* 
   ##Device = Tablets, Ipads (portrait)
   ##Screen = B/w 768px to 1024px
@@ -3865,6 +3916,7 @@ z-index: 100;
   z-index: 10;
   padding-top: 6rem;
   margin: auto;
+  
 }
 }
 
