--- a/public/styles/ws-in-seili.css
+++ b/public/styles/ws-in-seili.css
@@ -4075,6 +4075,7 @@ z-index: 100;
     overflow: hidden;
    mix-blend-mode: difference;    /* background-color: #333; */
     position: relative;
+    background-color: #48474761;
   }
   
   .topnav #myLinks {
